Fix asciicast layout issues

--- a/static/assets/less/custom.less
+++ b/static/assets/less/custom.less
@@ -32,6 +32,24 @@ figure.center {
   }
 }
 
+#asciicast-container-4580,
+#asciicast-container-4581 {
+  iframe {
+    height: 450px;
+  }
+}
+
+#asciicast-container-5900 {
+  iframe {
+    height: 545px;
+  }
+}
+#asciicast-container-5922 {
+  iframe {
+    height: 565px;
+  }
+}
+
 #page-navigation {
   .left {
     float: left;
